# host-reboot-notifier

./: Cargo.toml  Dockerfile  README.md  config.sample.json  release.sh  test.sh
src/: main.rs
src/models/: config.rs  data.rs  mod.rs  uptime.rs
