[package]
name = "host-reboot-notifier"
version = "0.1.2"
edition = "2021"
authors = ["Myles Empty Best"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prowl = "0.2.5"
prowl-queue = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.20.1", features = ["full"] }
log = "0.4.0"
env_logger = "0.8.4"
chrono = { version = "0.4.22", features = ["serde"] }
hostname = "0.3.1"
derive-getters = "0.2.0"
